v0.0.2/_sources/examples/plot_060_barplot.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/plot_060_barplot.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_plot_060_barplot.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_plot_060_barplot.py:


barplot
-------

Create bar plots for comparing categorical data.

Bar plots display the mean (or other estimator) of a numeric variable
grouped by categories. cnsplots enhances bar plots with statistical
testing, error bars, and publication-ready styling.

.. GENERATED FROM PYTHON SOURCE LINES 13-15

Load data
~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 15-25

.. code-block:: Python

    import numpy as np
    import pandas as pd
    import seaborn as sns

    import cnsplots as cns

    iris = sns.load_dataset("iris")
    tips = sns.load_dataset("tips")









.. GENERATED FROM PYTHON SOURCE LINES 26-29

Basic barplot
~~~~~~~~~~~~~
Simple bar plot with standard error bars.

.. GENERATED FROM PYTHON SOURCE LINES 29-34

.. code-block:: Python

    cns.figure(150, 100)
    ax = cns.barplot(data=tips, x="day", y="total_bill", errorbar="se")
    ax.set_title("Basic Barplot")





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_001.png
   :alt: Basic Barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(0.5, 1.0, 'Basic Barplot')



.. GENERATED FROM PYTHON SOURCE LINES 35-39

Barplot with Stripplot Overlay
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Overlay a stripplot to show individual observations on top of the summary bars.
Use one palette so both bars and points share the same group colors.

.. GENERATED FROM PYTHON SOURCE LINES 39-67

.. code-block:: Python

    day_order = ["Thur", "Fri", "Sat", "Sun"]
    overlay_palette = dict(zip(day_order, sns.color_palette("NEJM", len(day_order))))
    cns.figure(150, 100)
    ax = cns.barplot(
        data=tips,
        x="day",
        y="total_bill",
        errorbar="se",
        order=day_order,
        palette=overlay_palette,
    )
    cns.stripplot(
        data=tips,
        x="day",
        y="total_bill",
        hue="day",
        order=day_order,
        hue_order=day_order,
        palette=overlay_palette,
        legend=False,
        ax=ax,
        size=2,
        alpha=0.5,
        showmedian=False,
    )
    ax.set_title("Barplot with Stripplot Overlay")





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_002.png
   :alt: Barplot with Stripplot Overlay
   :srcset: /examples/images/sphx_glr_plot_060_barplot_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(0.5, 1.0, 'Barplot with Stripplot Overlay')



.. GENERATED FROM PYTHON SOURCE LINES 68-71

Barplot with standard deviation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Show variability with standard deviation error bars.

.. GENERATED FROM PYTHON SOURCE LINES 71-81

.. code-block:: Python

    cns.figure(150, 100)
    palette = {
        "Sat": cns.BLUE,
        "Fri": cns.BLUE,
        "Thur": cns.RED,
        "Sun": cns.RED,
    }
    cns.barplot(data=tips, x="day", y="total_bill", errorbar="sd", palette=palette)





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_003.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='day', ylabel='total_bill'>



.. GENERATED FROM PYTHON SOURCE LINES 82-85

Barplot with confidence intervals
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Display 95% confidence intervals.

.. GENERATED FROM PYTHON SOURCE LINES 85-89

.. code-block:: Python

    cns.figure(150, 100)
    cns.barplot(data=tips, x="day", y="total_bill", errorbar="ci")





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_004.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_004.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='day', ylabel='total_bill'>



.. GENERATED FROM PYTHON SOURCE LINES 90-93

No error bars
~~~~~~~~~~~~~
Clean bars without error indicators.

.. GENERATED FROM PYTHON SOURCE LINES 93-97

.. code-block:: Python

    cns.figure(150, 100)
    cns.barplot(data=tips, x="day", y="total_bill", errorbar=None)





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_005.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_005.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='day', ylabel='total_bill'>



.. GENERATED FROM PYTHON SOURCE LINES 98-101

Conditional coloring
~~~~~~~~~~~~~~~~~~~~
Color bars based on value thresholds.

.. GENERATED FROM PYTHON SOURCE LINES 101-107

.. code-block:: Python

    mean_bills = tips.groupby("day")["total_bill"].mean()
    cols = ["grey" if x < 21.0 else "orange" for x in mean_bills]
    cns.figure(150, 100)
    cns.barplot(data=tips, x="day", y="total_bill", palette=cols)





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_006.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_006.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='day', ylabel='total_bill'>



.. GENERATED FROM PYTHON SOURCE LINES 108-111

Statistical comparisons (all pairs)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Add significance annotations for all pairwise comparisons.

.. GENERATED FROM PYTHON SOURCE LINES 111-115

.. code-block:: Python

    cns.figure(150, 100, "Tableau")
    cns.barplot(data=tips, x="day", y="total_bill", pairs="all", addtip=True)





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_007.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_007.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

       ---> P-values were determined by two-sided Welch's t-test.

    <Axes: xlabel='day', ylabel='total_bill'>



.. GENERATED FROM PYTHON SOURCE LINES 116-119

Statistical comparisons (specific pairs)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Compare only selected pairs of groups.

.. GENERATED FROM PYTHON SOURCE LINES 119-129

.. code-block:: Python

    cns.figure(150, 100, "Set1")
    cns.barplot(
        data=tips,
        x="day",
        y="total_bill",
        pairs=[("Thur", "Fri"), ("Sat", "Sun")],
        addtip=True,
    )





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_008.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_008.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

       ---> P-values were determined by two-sided Welch's t-test.

    <Axes: xlabel='day', ylabel='total_bill'>



.. GENERATED FROM PYTHON SOURCE LINES 130-133

Grouped barplot with hue
~~~~~~~~~~~~~~~~~~~~~~~~
Split bars by a secondary categorical variable.

.. GENERATED FROM PYTHON SOURCE LINES 133-138

.. code-block:: Python

    cns.figure(180, 100, "BlueRed")
    cns.barplot(data=tips, x="day", y="total_bill", hue="sex")
    cns.take_legend_out()





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_009.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_009.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 139-142

Grouped barplot with statistical testing
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Compare specific groups across hue levels.

.. GENERATED FROM PYTHON SOURCE LINES 142-153

.. code-block:: Python

    cns.figure(180, 100, "BlueRed")
    cns.barplot(
        data=tips,
        x="day",
        y="total_bill",
        hue="sex",
        pairs=[(("Thur", "Male"), ("Fri", "Male"))],
    )
    cns.take_legend_out()





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_010.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_010.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

       ---> P-values were determined by two-sided Welch's t-test.




.. GENERATED FROM PYTHON SOURCE LINES 154-157

Horizontal barplot
~~~~~~~~~~~~~~~~~~
Flip axes for horizontal layout.

.. GENERATED FROM PYTHON SOURCE LINES 157-167

.. code-block:: Python

    cns.figure(100, 180, "Set1")
    cns.barplot(
        data=tips,
        x="total_bill",
        y="day",
        order=["Sun", "Fri", "Thur", "Sat"],
        pairs=[("Sun", "Fri")],
    )





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_011.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_011.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

       ---> P-values were determined by two-sided Welch's t-test.

    <Axes: xlabel='total_bill', ylabel='day'>



.. GENERATED FROM PYTHON SOURCE LINES 168-171

Custom order
~~~~~~~~~~~~
Specify the order of categories.

.. GENERATED FROM PYTHON SOURCE LINES 171-180

.. code-block:: Python

    cns.figure(150, 100, "Tableau")
    cns.barplot(
        data=tips,
        x="day",
        y="total_bill",
        order=["Thur", "Fri", "Sat", "Sun"],
    )





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_012.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_012.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='day', ylabel='total_bill'>



.. GENERATED FROM PYTHON SOURCE LINES 181-184

Diverging barplot (centered on mean)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Show deviations from the mean with centered bars.

.. GENERATED FROM PYTHON SOURCE LINES 184-194

.. code-block:: Python

    tips_centered = tips.copy()
    tips_centered["bill_deviation"] = (
        tips_centered["total_bill"] - tips_centered["total_bill"].mean()
    )
    cns.figure(100, 150, "Tableau")
    ax = cns.barplot(data=tips_centered, x="day", y="bill_deviation")
    ax.axhline(0, color="k", clip_on=False, lw=0.8)
    ax.spines["bottom"].set_visible(False)





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_013.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_013.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 195-198

Horizontal diverging barplot
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Horizontal layout for diverging bars.

.. GENERATED FROM PYTHON SOURCE LINES 198-204

.. code-block:: Python

    cns.figure(150, 100, "Tableau")
    ax = cns.barplot(data=tips_centered, y="day", x="bill_deviation")
    ax.axvline(0, color="k", clip_on=False, lw=0.8)
    ax.spines["left"].set_visible(False)





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_014.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_014.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 205-208

Barplot with species data
~~~~~~~~~~~~~~~~~~~~~~~~~
Compare measurements across species.

.. GENERATED FROM PYTHON SOURCE LINES 208-215

.. code-block:: Python

    cns.figure(150, 100, "Bold")
    ax = cns.barplot(data=iris, x="species", y="sepal_width", pairs="all", addtip=True)
    ax.set_xticklabels(
        ax.get_xticklabels(), rotation=45, ha="right", rotation_mode="anchor"
    )





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_015.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_015.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

       ---> P-values were determined by two-sided Welch's t-test.

    [Text(0, 0, 'setosa'), Text(1, 0, 'versicolor'), Text(2, 0, 'virginica')]



.. GENERATED FROM PYTHON SOURCE LINES 216-219

Barplot with sample counts
~~~~~~~~~~~~~~~~~~~~~~~~~~
Display number of samples above bars.

.. GENERATED FROM PYTHON SOURCE LINES 219-223

.. code-block:: Python

    cns.figure(150, 100)
    cns.barplot(data=iris, x="species", y="sepal_length", addtip=True)





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_016.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_016.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='species', ylabel='sepal_length'>



.. GENERATED FROM PYTHON SOURCE LINES 224-227

Multiple metrics comparison
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Compare different measurements using multipanel.

.. GENERATED FROM PYTHON SOURCE LINES 227-246

.. code-block:: Python

    mp = cns.multipanel(max_width=400)

    mp.panel("A", 80, 120)
    cns.barplot(data=iris, x="species", y="sepal_length")
    mp.get_axes("A").set_title("Sepal Length")

    mp.panel("B", 80, 120)
    cns.barplot(data=iris, x="species", y="sepal_width")
    mp.get_axes("B").set_title("Sepal Width")

    mp.panel("C", 80, 120)
    cns.barplot(data=iris, x="species", y="petal_length")
    mp.get_axes("C").set_title("Petal Length")

    mp.panel("D", 80, 120)
    cns.barplot(data=iris, x="species", y="petal_width")
    mp.get_axes("D").set_title("Petal Width")





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_017.png
   :alt: Sepal Length, Sepal Width, Petal Length, Petal Width
   :srcset: /examples/images/sphx_glr_plot_060_barplot_017.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(0.5, 1.0, 'Petal Width')



.. GENERATED FROM PYTHON SOURCE LINES 247-250

Error bar comparison
~~~~~~~~~~~~~~~~~~~~
Compare different error bar types side by side.

.. GENERATED FROM PYTHON SOURCE LINES 250-265

.. code-block:: Python

    mp = cns.multipanel(max_width=480)

    mp.panel("A", 100, 130)
    cns.barplot(data=tips, x="day", y="total_bill", errorbar="se")
    mp.get_axes("A").set_title("Standard Error")

    mp.panel("B", 100, 130)
    cns.barplot(data=tips, x="day", y="total_bill", errorbar="sd")
    mp.get_axes("B").set_title("Std Deviation")

    mp.panel("C", 100, 130)
    cns.barplot(data=tips, x="day", y="total_bill", errorbar="ci")
    mp.get_axes("C").set_title("95% CI")





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_018.png
   :alt: Standard Error, Std Deviation, 95% CI
   :srcset: /examples/images/sphx_glr_plot_060_barplot_018.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(0.5, 1.0, '95% CI')



.. GENERATED FROM PYTHON SOURCE LINES 266-269

Grouped analysis by time
~~~~~~~~~~~~~~~~~~~~~~~~
Compare groups across different time periods.

.. GENERATED FROM PYTHON SOURCE LINES 269-285

.. code-block:: Python

    mp = cns.multipanel(max_width=400)

    lunch = tips[tips["time"] == "Lunch"]
    dinner = tips[tips["time"] == "Dinner"]

    mp.panel("A", 100, 150)
    cns.barplot(data=lunch, x="day", y="total_bill", hue="sex")
    mp.get_axes("A").legend().remove()
    mp.get_axes("A").set_title("Lunch")

    mp.panel("B", 100, 150)
    cns.barplot(data=dinner, x="day", y="total_bill", hue="sex")
    cns.take_legend_out()
    mp.get_axes("B").set_title("Dinner")





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_019.png
   :alt: Lunch, Dinner
   :srcset: /examples/images/sphx_glr_plot_060_barplot_019.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(0.5, 1.0, 'Dinner')



.. GENERATED FROM PYTHON SOURCE LINES 286-289

Percentage change visualization
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Show relative changes from baseline.

.. GENERATED FROM PYTHON SOURCE LINES 289-309

.. code-block:: Python

    np.random.seed(42)
    baseline = pd.DataFrame(
        {
            "treatment": ["Control", "Drug A", "Drug B", "Drug C"],
            "pct_change": [0, 25, -15, 45],
            "error": [5, 8, 6, 10],
        }
    )
    colors = [
        "gray" if x == 0 else ("green" if x > 0 else "red") for x in baseline["pct_change"]
    ]
    cns.figure(150, 100, color_cycle=colors)
    cns.barplot(data=baseline, x="treatment", y="pct_change", errorbar=None)
    ax.axhline(0, color="k", lw=0.8)
    ax.set_ylabel("% Change from Baseline")
    ax.set_xticklabels(
        ax.get_xticklabels(), rotation=45, ha="right", rotation_mode="anchor"
    )





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_020.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_020.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    [Text(0, 0, 'setosa'), Text(1, 0, 'versicolor'), Text(2, 0, 'virginica')]



.. GENERATED FROM PYTHON SOURCE LINES 310-313

Gene expression comparison
~~~~~~~~~~~~~~~~~~~~~~~~~~
Biological example: gene expression by condition.

.. GENERATED FROM PYTHON SOURCE LINES 313-340

.. code-block:: Python

    np.random.seed(42)
    gene_data = pd.DataFrame(
        {
            "gene": ["TP53"] * 30 + ["BRCA1"] * 30 + ["MYC"] * 30,
            "expression": np.concatenate(
                [
                    np.random.normal(5, 1, 30),
                    np.random.normal(3, 0.8, 30),
                    np.random.normal(7, 1.5, 30),
                ]
            ),
            "condition": (["Control"] * 15 + ["Treatment"] * 15) * 3,
        }
    )

    cns.figure(180, 100)
    ax = cns.barplot(
        data=gene_data,
        x="gene",
        y="expression",
        hue="condition",
        pairs=[(("TP53", "Control"), ("TP53", "Treatment"))],
    )
    ax.set_ylabel("Expression (log2 TPM)")
    cns.take_legend_out()





.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_021.png
   :alt: plot 060 barplot
   :srcset: /examples/images/sphx_glr_plot_060_barplot_021.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

       ---> P-values were determined by two-sided Welch's t-test.




.. GENERATED FROM PYTHON SOURCE LINES 341-344

Palette comparison with bars
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Different palettes for the same data.

.. GENERATED FROM PYTHON SOURCE LINES 344-361

.. code-block:: Python

    mp = cns.multipanel(max_width=400)

    mp.panel("A", 80, 120, color_cycle="Set1")
    cns.barplot(data=tips, x="day", y="total_bill")
    mp.get_axes("A").set_title("Set1")

    mp.panel("B", 80, 120, color_cycle="Tableau")
    cns.barplot(data=tips, x="day", y="total_bill")
    mp.get_axes("B").set_title("Tableau")

    mp.panel("C", 80, 120, color_cycle="Bold")
    cns.barplot(data=tips, x="day", y="total_bill")
    mp.get_axes("C").set_title("Bold")

    mp.panel("D", 80, 120, color_cycle="Pastel1")
    cns.barplot(data=tips, x="day", y="total_bill")
    mp.get_axes("D").set_title("Pastel1")



.. image-sg:: /examples/images/sphx_glr_plot_060_barplot_022.png
   :alt: Set1, Tableau, Bold, Pastel1
   :srcset: /examples/images/sphx_glr_plot_060_barplot_022.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(0.5, 1.0, 'Pastel1')




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.178 seconds)


.. _sphx_glr_download_examples_plot_060_barplot.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_060_barplot.ipynb <plot_060_barplot.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_060_barplot.py <plot_060_barplot.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_060_barplot.zip <plot_060_barplot.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
